# mybrarian

./: .env.example  .gitignore  LICENSE.txt  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  run_api.bat  run_backend.bat  run_frontend.bat
backend/: .env.example  pyproject.toml
backend/src/: __main__.py  cli.py  config.py  models.py
backend/src/plugins/: __init__.py  base.py
backend/src/sources/: __init__.py  aladin.py  bookers.py  google_play_books.py  ridibooks_select.py
backend/tests/: test_config.py
frontend/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  styles.css
frontend/src/components/: BookCard.tsx  BookList.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  SearchBar.tsx  SourceCard.tsx  SourceResults.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: __init__.py  cli.py  logger.py  main.py
src/plugins/: adapters.py  base.py  loader.py
src/sources/: aladin.py  bookers.py  library.py  local_books.py  ssafy_ebook.py
