[project]
name = "mybrarian"
version = "0.1.0"
description = "ISBN 또는 도서명으로 여러 소스를 통합 검색하여 도서의 이용 가능 여부를 확인하는 시스템"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
dependencies = [
    # Web Framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    # HTTP & Web Scraping
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "aiohttp>=3.10.0",
    "lxml==5.1.0",
    # Browser Automation
    "playwright==1.41.0",
    # Configuration
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    # Utilities
    "python-multipart==0.0.6",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.26.0",
]

[project.scripts]
mybrarian = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

